# kuri_mbzirc_challenge_1

./: .gitignore  CMakeLists.txt  package.xml
launch/: task.launch
msg/: TrackerData.msg
src/: mark_tracker.cpp  mark_tracker.h  simplemotionfilter.cpp  simplemotionfilter.h  template-tracker.cpp  visptracker.cpp
